styles/undergroundMap.css
#undergroundMap-container {
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
}

#map-container {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#map {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.map-layer {
  position: absolute;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  object-fit: contain;
}

.pin-layer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.pin {
  position: absolute;
  white-space: nowrap;
  font-size: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pin .emoji {
  display: inline-block;
  font-size: 1em;
  transform: translate(-50%, -50%);
}

.pin .label {
  display: inline-block;
  background-color: rgba(0, 0, 0, 0.7);
  color: whitesmoke;
  padding: 2px 4px;
  border-radius: 3px;
  font-size: 1em;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.pin .label.right {
  left: 50%;
  transform: translateY(-100%);
}

.pin .label.left {
  right: calc(100% + 20px);
  transform: translateY(-100%);
}

#layers-panel {
  position: absolute;
  top: 10px;
  left: 10px;
  background: rgba(255, 255, 255, 0.8);
  padding: 10px;
  border-radius: 5px;
}

#zoom-controls {
  position: absolute;
  bottom: 10px;
  right: 10px;
  max-width: 7%;
  background: rgba(255, 255, 255, 0.8);
  padding: 10px;
  border-radius: 5px;
}

button {
  display: block;
  margin-bottom: 5px;
}

